Fix two styling issues with layout
1. The main view wasn't stretching to the bottom with no content.
2. There was a boneheaded error charts expanding beyond the initial
main-view area were getting cut off. Fixed that.

--- a/src/apps/assets/sass/main.scss
+++ b/src/apps/assets/sass/main.scss
@@ -37,12 +37,13 @@ header {
 
 .app-main {
     width: 100%;
+    height:100%;
     @include flexbox;
 }
 
 .main-view {
     @include flex-grow(1);
-    overflow: hidden;
+    overflow-x: hidden;
     margin: 15px;
 }
 
